[package]
name = "online-game-test"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
glam = { version = "0.27.0", features = ["serde"] }
macroquad = "0.4.8"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tokio-macros = "2.3.0"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
